samples/_failures_safe/1761549240_da0a2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b48144ec.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_b48144ec.c:130:32: error: expected ‘)’ at end of input
  130 |     for (int i = 0; i < rows; i
      |         ~                      ^
      |                                )
./samples/SAFE/__tmp_b48144ec.c:130:5: error: expected declaration or statement at end of input
  130 |     for (int i = 0; i < rows; i
      |     ^~~
